MDL-51924 Using box-sizing mixin to prevent blocks overlap on profile page

--- a/theme/bootstrapbase/less/moodle/user.less
+++ b/theme/bootstrapbase/less/moodle/user.less
@@ -20,7 +20,7 @@
     border-radius: @baseBorderRadius;
     padding: 0 15px;
     margin-bottom: 20px;
-    box-sizing: border-box;
+    .box-sizing(border-box);
 }
 .userprofile .profile_tree section h3 {
     font-size: round(@baseFontSize * 1.30);
